# libtca9534a

./: .clang-format  COPYING  Makefile.am  README  README.md  bootstrap.sh  clean.sh  configure.ac
.github/workflows/: codeql-analysis.yml
include/: i2c.h  tca9534a.h  util.h
src/: i2c.c  tca9534a.c
